--- a/app/src/main/res/layout-land/category.xml
+++ b/app/src/main/res/layout-land/category.xml
@@ -12,21 +12,12 @@
             android:id="@+id/cate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/edtiborder"
             android:layout_marginLeft="100dp"
             android:layout_marginRight="5dp"
-            android:layout_marginTop="15dp"
-            android:layout_alignParentTop="true"/>
-
-        <ImageButton
-            android:id="@+id/cate2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_marginTop="17dp"
             android:background="@drawable/edtiborder"
-            android:layout_marginLeft="500dp"
-            android:layout_marginRight="5dp"
-            android:layout_marginTop="15dp"
-            android:layout_alignParentTop="true"/>
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true" />
 
     </RelativeLayout>
 </android.support.v7.widget.CardView>
