--- a/app/src/main/res/layout-land/article.xml
+++ b/app/src/main/res/layout-land/article.xml
@@ -9,7 +9,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="25dp"
-        android:text="title"
+        android:text="@string/title"
         android:textColor="#000000"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
@@ -30,7 +30,7 @@
         android:id="@+id/author"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="author"
+        android:text="@string/author"
         android:textColor="#000000"
         android:layout_below="@+id/title"
         android:layout_alignStart="@+id/title"
@@ -42,7 +42,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="19dp"
         android:textColor="#000000"
-        android:text="desc"
+        android:text="@string/desc"
         android:layout_below="@+id/author"
         android:layout_alignStart="@+id/author" />
 
@@ -50,8 +50,8 @@
         android:id="@+id/price"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:text="price"
+        android:layout_marginTop="40dp"
+        android:text="@string/price"
         android:textColor="#000000"
         android:layout_below="@+id/desc"
         android:layout_alignStart="@+id/desc" />
@@ -60,18 +60,18 @@
         android:id="@+id/stock"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="stock"
+        android:text="@string/stock"
         android:textColor="#000000"
         android:layout_below="@+id/price"
         android:layout_alignEnd="@+id/desc"
-        android:layout_marginTop="30dp" />
+        android:layout_marginTop="20dp" />
 
     <CheckBox
         android:id="@+id/wishlist"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:buttonTint="@color/colorPrimary"
-        android:text="Ajouter à ma liste d'envies"
+        android:text="@string/addWishlist"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="13dp" />
@@ -83,6 +83,32 @@
         android:layout_alignParentTop="true"
         android:textColor="#000000"
         android:layout_alignStart="@+id/imageButton"
-        android:text="category" />
+        android:text="@string/category" />
+
+    <TextView
+        android:id="@+id/price2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/price"
+        android:textColor="#000000"
+        android:layout_toEndOf="@+id/space"
+        android:text="@string/pricepromo" />
+
+    <TextView
+        android:id="@+id/space"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="   "
+        android:layout_toEndOf="@+id/price" />
+
+    <TextView
+        android:id="@+id/promo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/price2"
+        android:layout_alignStart="@+id/price"
+        android:text="@string/promo"
+        android:layout_marginBottom="2dp"
+        android:textColor="@color/colorPromo"/>
 
 </RelativeLayout>
