--- a/app/src/main/res/layout/article.xml
+++ b/app/src/main/res/layout/article.xml
@@ -56,7 +56,7 @@
         android:textColor="#000000"
         android:layout_below="@+id/author"
         android:layout_alignStart="@+id/author"
-        android:layout_marginTop="55dp" />
+        android:layout_marginTop="70dp" />
 
     <TextView
         android:id="@+id/stock"
@@ -85,5 +85,24 @@
         android:layout_alignParentTop="true"
         android:textColor="#000000"
         android:text="category" />
+
+    <TextView
+        android:id="@+id/price2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignStart="@+id/price"
+        android:layout_below="@+id/price"
+        android:textColor="#000000"
+        android:text="pricePromo" />
+
+    <TextView
+        android:id="@+id/promo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="30dp"
+        android:textColor="@color/colorPromo"
+        android:text="PROMO!"
+        android:layout_above="@+id/price2"
+        android:layout_alignStart="@+id/price" />
 
 </RelativeLayout>
