--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#3E606F</color>
     <color name="colorPrimaryDark">#193441</color>
     <color name="colorAccent">#FCFFF5</color>
+    <color name="colorPromo">#D40D12</color>
 </resources>
