--- a/app/src/main/res/layout/notif_list.xml
+++ b/app/src/main/res/layout/notif_list.xml
@@ -2,11 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <GridView
-        android:id="@+id/test"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:numColumns="2">
-    </GridView>
 
+    <ListView
+        android:id="@+id/listNotif"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 </LinearLayout>
