--- a/app/src/main/res/menu/menu_article.xml
+++ b/app/src/main/res/menu/menu_article.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.example.canor.android.ArticleActivity">
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/action_notif"
         android:orderInCategory="100"
         android:title="@string/action_settings"
         app:showAsAction="never" />
