--- a/app/src/main/res/layout-land/element.xml
+++ b/app/src/main/res/layout-land/element.xml
@@ -94,8 +94,21 @@
             android:layout_height="wrap_content"
             android:layout_above="@+id/price"
             android:textColor="#D40D12"
+            android:textStyle="bold"
             android:layout_alignStart="@+id/price"
             android:text="@string/promo" />
+
+
+        <TextView
+            android:id="@+id/news"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/author"
+            android:textColor="#D40D12"
+            android:textStyle="bold"
+            android:layout_alignStart="@+id/price"
+            android:text="@string/nouveaute" />
+
 
         <TextView
             android:id="@+id/space"
