--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -11,6 +11,10 @@
             android:icon="@drawable/ic_menu_menu"
             android:title="@string/categories" />
         <item
+            android:id="@+id/nav_events"
+            android:icon="@drawable/ic_menu_event"
+            android:title="@string/ev_nements" />
+        <item
             android:id="@+id/nav_news"
             android:icon="@drawable/ic_menu_news"
             android:title="@string/news" />
@@ -28,12 +32,12 @@
             android:title="@string/notif" />
     </group>
 
-    <item android:title="Réglages">
+    <item android:title="@string/r_glages">
         <menu>
             <item
                 android:id="@+id/nav_settings"
                 android:icon="@drawable/ic_menu_manage"
-                android:title="Préférences" />
+                android:title="@string/pr_f_rences" />
         </menu>
     </item>
 
