--- a/app/src/main/res/layout/notif.xml
+++ b/app/src/main/res/layout/notif.xml
@@ -8,6 +8,7 @@
         android:layout_height="wrap_content"
         android:text="hour"
         android:textColor="#000"
+        android:layout_marginEnd="37dp"
         android:layout_below="@+id/date"
         android:layout_alignParentEnd="true" />
 
@@ -15,10 +16,11 @@
         android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
         android:textColor="#000"
-        android:text="TextView" />
+        android:text="TextView"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="19dp" />
 
     <TextView
         android:id="@+id/desc"
@@ -27,7 +29,7 @@
         android:textColor="#000"
         android:text="TextView"
         android:layout_below="@+id/title"
-        android:layout_alignParentStart="true" />
+        android:layout_alignStart="@+id/title" />
 
     <TextView
         android:id="@+id/date"
@@ -35,5 +37,6 @@
         android:layout_height="wrap_content"
         android:textColor="#000"
         android:text="date"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentTop="true"
+        android:layout_alignStart="@+id/hour" />
 </RelativeLayout>
