--- a/app/src/main/res/layout/pref.xml
+++ b/app/src/main/res/layout/pref.xml
@@ -9,6 +9,14 @@
         android:layout_height="wrap_content"
         android:text="subCategory"
         android:layout_marginTop="14dp"
+        android:layout_alignEnd="@+id/textView3"
+        android:layout_alignParentTop="true"/>
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="                                                                   "
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_alignParentStart="true" />
 </RelativeLayout>
